# rc-racer

./: .flake8  .pydocstyle  LICENSE  README.md
.github/workflows/: ci.yml  docker-publish.yml  nightly.yml  sbom.yml
docker/: .env  Dockerfile  Dockerfile.ci  Dockerfile.dev  docker-compose.yml
documentation/: Rc-Car-Design.md  RoboMagellan-Requirements.md  Software-Design.md  Software-Development-Plan.md
scripts/: setup-dev-env.sh
src/localization/: CMakeLists.txt  package.xml
src/mapping/: CMakeLists.txt  package.xml
src/motor_controller/: CMakeLists.txt  package.xml
src/object_detection/: CMakeLists.txt  package.xml
src/planning_control/: CMakeLists.txt  package.xml
src/safety/: CMakeLists.txt  package.xml
src/state_estimation/: CMakeLists.txt  package.xml
src/telemetry/: CMakeLists.txt  package.xml
test/integration/: CMakeLists.txt  package.xml
test/integration/config/: .gitkeep
test/integration/launch/: .gitkeep  test_template.launch.py.example
test/system/: CMakeLists.txt  package.xml
test/system/config/: .gitkeep
test/system/docker/: Dockerfile  docker-compose.yml
test/system/launch/: test_emergency_stop.launch.py  test_full_stack_sim.launch.py  test_startup_shutdown.py
test/system/worlds/: .gitkeep
