<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rc_racer_system_tests</name>
  <version>0.0.1</version>
  <description>
    System/End-to-End tests for RC Racer.
    
    These tests are: SLOW, BRITTLE, EXTREMELY VALUABLE
    
    Run via CI/CD:
      - Nightly builds
      - Pre-release validation
      - Before hardware deployment
  </description>
  <maintainer email="anthony@todo.com">Anthony Tracy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Test framework dependencies -->
  <!-- Note: Using specific linters instead of ament_lint_common to exclude copyright check -->
  <!-- (SPDX format not recognized by ament_copyright) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>launch_ros</test_depend>

  <!-- ROS 2 dependencies -->
  <test_depend>rclpy</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>nav_msgs</test_depend>

  <!-- Simulation dependencies -->
  <test_depend>gazebo_ros</test_depend>
  <test_depend>gazebo_plugins</test_depend>
  <test_depend>robot_state_publisher</test_depend>

  <!-- All packages under test -->
  <test_depend>state_estimation</test_depend>
  <test_depend>localization</test_depend>
  <test_depend>mapping</test_depend>
  <test_depend>object_detection</test_depend>
  <test_depend>planning_control</test_depend>
  <test_depend>motor_controller</test_depend>
  <test_depend>safety</test_depend>
  <test_depend>telemetry</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

